--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
   "python.linting.banditEnabled": true,
   "python.linting.flake8Enabled": false,
   "python.linting.enabled": true,
-  "python.formatting.provider": "black"
+  "python.formatting.blackPath": ".venv/bin/black",
+  "python.formatting.provider": "autopep8",
+  "editor.formatOnSave": true
 }
