--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
-  "python.linting.banditEnabled": true,
+  "python.linting.banditEnabled": false,
   "python.linting.flake8Enabled": false,
   "python.linting.enabled": true,
   "python.formatting.blackPath": ".venv/bin/black",
   "python.formatting.provider": "autopep8",
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "python.linting.mypyEnabled": true
 }
