Got type checking to work

--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,12 @@ name = "pypi"
 
 [packages]
 pandas = "*"
+pandas-stubs = "*"
 numpy = "*"
 
 [dev-packages]
 mypy = "*"
+autopep8 = "*"
 
 [requires]
 python_version = "3.8"
