--- a/Pipfile
+++ b/Pipfile
@@ -1,3 +1,7 @@
+[[source]]
+url = "https://pypi.org/simple"
+verify_ssl = true
+name = "pypi"
 
 [packages]
 pandas = "*"
@@ -10,3 +14,6 @@ streamlit = "*"
 mypy = "*"
 autopep8 = "*"
 pytest = "*"
+
+[requires]
+python_version = "3.9"
