--- a/.github/workflows/scenario_data.yml
+++ b/.github/workflows/scenario_data.yml
@@ -19,15 +19,9 @@ jobs:
     - run: pipenv install
     - name: Run a one-line script
       run: pipenv run data
-    - name: switching from HTTPS to SSH
-      run: git remote set-url origin ${{ secrets.ssh }}
-    - name: check for changes
-      run: git status
-    - name: stage changed files
-      run: git add .
-    - name: commit changed files
-      run: git commit -m "Auto updating data files"
-    - name: fetch from master
-      run: git fetch origin master
-    - name: push code to master
-      run: git push origin HEAD:master
+    - name: Commit report
+      run: |
+        git config --global user.name 'autobot'
+        git config --global user.email 'autobot@users.noreply.github.com'
+        git commit -am "Automated data update"
+        git push
